--- a/style.global.css
+++ b/style.global.css
@@ -2,6 +2,7 @@
     == FONTS ==
     ===========
 */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap');
 @font-face {
     font-family: "walkway";
     src: url("./fonts/walkway_black.woff") format('woff');
@@ -89,7 +90,7 @@
 body {
     min-width: 100vw;
     min-height: 100vh;
-    background-color: #3b3b3b;
+    background-color: rgba(59, 59, 59, 0.7);
 
     overflow: hidden;
 }
