Minor fix on Reselim_ skin
- Fix the cover display

--- a/skins/songCard/reselim/style.css
+++ b/skins/songCard/reselim/style.css
@@ -28,6 +28,9 @@
     overflow: hidden;
     border-radius: 6px;
     position: relative;
+
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 #meta {
